fix gallery alignment

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -65,16 +65,13 @@ $color-main-p: $black;
 // Gallery
 
 .gallery-col {
-  border: 3px dotted blue;
-  align-self: center;
-  min-width: 200px;
-  min-height: 200px;
+  // border: 3px dotted blue;
+  padding: 1rem 0rem 1rem 0rem;
 }
 
-.gallery-row {
-  border: 3px solid red;
-  //margin: 1rem 0rem 1rem 0rem;
-}
+// .gallery-row {
+//   border: 3px solid red;
+// }
 
 .img-fluid {
   max-width: 200px;
